# bad_player

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: image_decode.rs  main.rs  term.rs  video.rs
